--- a/Matt W/compare_LSTMS.ipynb
+++ b/Matt W/compare_LSTMS.ipynb
@@ -114,18 +114,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_steps = X_train_mv.shape[1]\n",
-    "n_features = X_train_mv.shape[2]\n",
-    "n_outputs = y_train_mv.shape[1]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
    "outputs": [],
@@ -247,7 +235,7 @@
     "MV_LSTM.add(LSTM(32,return_sequences=True))\n",
     "MV_LSTM.add(Dropout(0.1)) #Prevent overfitting\n",
     "MV_LSTM.add(LSTM(16, return_sequences=False))\n",
-    "MV_LSTM.add(Dense(n_outputs, activation ='linear')) \n",
+    "MV_LSTM.add(Dense(1, activation ='linear')) \n",
     "\n",
     "MV_LSTM.compile(optimizer=Adam(learning_rate = 0.001), loss='mse', metrics = [RootMeanSquaredError()])\n",
     "\n",
@@ -521,7 +509,67 @@
       "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - loss: 9.5176e-04 - root_mean_squared_error: 0.0306 - val_loss: 6.7115e-04 - val_root_mean_squared_error: 0.0259\n",
       "Epoch 30/30\n",
       "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 13ms/step - loss: 9.5070e-04 - root_mean_squared_error: 0.0305 - val_loss: 6.7103e-04 - val_root_mean_squared_error: 0.0259\n",
-      "Epoch 1/30\n"
+      "Epoch 1/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 15ms/step - loss: 0.0030 - root_mean_squared_error: 0.0529 - val_loss: 8.2415e-04 - val_root_mean_squared_error: 0.0287\n",
+      "Epoch 2/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 13ms/step - loss: 0.0011 - root_mean_squared_error: 0.0328 - val_loss: 7.1202e-04 - val_root_mean_squared_error: 0.0267\n",
+      "Epoch 3/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 11ms/step - loss: 9.9313e-04 - root_mean_squared_error: 0.0313 - val_loss: 6.7612e-04 - val_root_mean_squared_error: 0.0260\n",
+      "Epoch 4/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 11ms/step - loss: 9.6835e-04 - root_mean_squared_error: 0.0309 - val_loss: 6.6412e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 5/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 12ms/step - loss: 9.6916e-04 - root_mean_squared_error: 0.0308 - val_loss: 6.6027e-04 - val_root_mean_squared_error: 0.0257\n",
+      "Epoch 6/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 10ms/step - loss: 9.7430e-04 - root_mean_squared_error: 0.0309 - val_loss: 6.5875e-04 - val_root_mean_squared_error: 0.0257\n",
+      "Epoch 7/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 11ms/step - loss: 9.7617e-04 - root_mean_squared_error: 0.0309 - val_loss: 6.5849e-04 - val_root_mean_squared_error: 0.0257\n",
+      "Epoch 8/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 11ms/step - loss: 9.7562e-04 - root_mean_squared_error: 0.0309 - val_loss: 6.5902e-04 - val_root_mean_squared_error: 0.0257\n",
+      "Epoch 9/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 10ms/step - loss: 9.7413e-04 - root_mean_squared_error: 0.0309 - val_loss: 6.6001e-04 - val_root_mean_squared_error: 0.0257\n",
+      "Epoch 10/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 11ms/step - loss: 9.7237e-04 - root_mean_squared_error: 0.0309 - val_loss: 6.6122e-04 - val_root_mean_squared_error: 0.0257\n",
+      "Epoch 11/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 11ms/step - loss: 9.7056e-04 - root_mean_squared_error: 0.0308 - val_loss: 6.6245e-04 - val_root_mean_squared_error: 0.0257\n",
+      "Epoch 12/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 10ms/step - loss: 9.6879e-04 - root_mean_squared_error: 0.0308 - val_loss: 6.6360e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 13/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 11ms/step - loss: 9.6709e-04 - root_mean_squared_error: 0.0308 - val_loss: 6.6458e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 14/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 9ms/step - loss: 9.6545e-04 - root_mean_squared_error: 0.0308 - val_loss: 6.6536e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 15/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 11ms/step - loss: 9.6388e-04 - root_mean_squared_error: 0.0307 - val_loss: 6.6596e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 16/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 10ms/step - loss: 9.6239e-04 - root_mean_squared_error: 0.0307 - val_loss: 6.6639e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 17/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 13ms/step - loss: 9.6096e-04 - root_mean_squared_error: 0.0307 - val_loss: 6.6667e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 18/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 15ms/step - loss: 9.5960e-04 - root_mean_squared_error: 0.0307 - val_loss: 6.6684e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 19/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 13ms/step - loss: 9.5830e-04 - root_mean_squared_error: 0.0307 - val_loss: 6.6691e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 20/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 10ms/step - loss: 9.5706e-04 - root_mean_squared_error: 0.0306 - val_loss: 6.6691e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 21/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 10ms/step - loss: 9.5588e-04 - root_mean_squared_error: 0.0306 - val_loss: 6.6687e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 22/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 16ms/step - loss: 9.5474e-04 - root_mean_squared_error: 0.0306 - val_loss: 6.6680e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 23/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 9ms/step - loss: 9.5364e-04 - root_mean_squared_error: 0.0306 - val_loss: 6.6670e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 24/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 11ms/step - loss: 9.5258e-04 - root_mean_squared_error: 0.0306 - val_loss: 6.6660e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 25/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 10ms/step - loss: 9.5156e-04 - root_mean_squared_error: 0.0306 - val_loss: 6.6648e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 26/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 10ms/step - loss: 9.5056e-04 - root_mean_squared_error: 0.0305 - val_loss: 6.6635e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 27/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 10ms/step - loss: 9.4959e-04 - root_mean_squared_error: 0.0305 - val_loss: 6.6626e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 28/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 9ms/step - loss: 9.4865e-04 - root_mean_squared_error: 0.0305 - val_loss: 6.6621e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 29/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 14ms/step - loss: 9.4772e-04 - root_mean_squared_error: 0.0305 - val_loss: 6.6617e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Epoch 30/30\n",
+      "\u001b[1m278/278\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 13ms/step - loss: 9.4682e-04 - root_mean_squared_error: 0.0305 - val_loss: 6.6624e-04 - val_root_mean_squared_error: 0.0258\n",
+      "Timings (in seconds):{'CPU': {'Multivariate': 88.73627972602844, 'Univariate': 53.696937084198}, 'GPU': {'Multivariate': 136.89519214630127, 'Univariate': 97.84195303916931}}\n"
      ]
     }
    ],
