--- a/report/03 - ARIMA/ARIMA.ipynb
+++ b/report/03 - ARIMA/ARIMA.ipynb
@@ -1019,7 +1019,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This makes it a highly inappropraite model for the task at hand. Even on a relatively small amount of data it gives us nothing in the way of predicting pollution levels and this issue would only continue as the amount of data is scaled up. It's not an appropriate model to capture the variation of the pollution over time."
+    "The above makes it an inappropraite model for the task at hand. Even on a relatively small amount of data it gives us nothing in the way of predicting pollution levels and this issue would only continue as the amount of data is scaled up. Furthermore, the 'optimal' model we arrived at using auto_arima takes a hefty amount of time to run, a problem that will be further exarcebated if this was to be used for a big data problem as a large amount of time would be required for it to process the increased amount of data.\n",
+    "\n",
+    "All in all, we don't believe that the ARIMA gives us much in the way of being a useful model, nor being appropriate for use as a baseline going forward due to its poor performance. "
    ]
   },
   {
@@ -1033,9 +1035,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "ARIMA - https://www.datacamp.com/tutorial/arima\n",
+    "\n",
     "Choosing AR and MA values - https://people.duke.edu/~rnau/411arim3.htm#:~:text=You%20are%20already%20familiar%20with,series%20and%20lags%20of%20itself. \n",
     "\n",
     "Augmented Dickey-Fuller - https://www.analyticsvidhya.com/blog/2021/06/statistical-tests-to-check-stationarity-in-time-series-part-1/#How_to_Check_Stationarity? \n",
+    "\n",
+    "Auto ARIMA - https://www.analyticsvidhya.com/blog/2018/08/auto-arima-time-series-modeling-python-r/#h-what-is-auto-arima\n",
     "\n",
     "AI was used for parts of the code.\n",
     "\n"
