--- a/report/01 - Download Data/Preprocessing.ipynb
+++ b/report/01 - Download Data/Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,44 @@
       "Requirement already satisfied: numpy>=1.19.5 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from scikit-learn) (1.26.4)\n",
       "Requirement already satisfied: scipy>=1.6.0 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from scikit-learn) (1.13.1)\n",
       "Requirement already satisfied: joblib>=1.2.0 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from scikit-learn) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from scikit-learn) (3.5.0)\n"
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from scikit-learn) (3.5.0)\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting pmdarima\n",
+      "  Downloading pmdarima-2.0.4-cp39-cp39-macosx_11_0_arm64.whl.metadata (7.8 kB)\n",
+      "Requirement already satisfied: joblib>=0.11 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from pmdarima) (1.4.2)\n",
+      "Collecting Cython!=0.29.18,!=0.29.31,>=0.29 (from pmdarima)\n",
+      "  Downloading Cython-3.0.11-py2.py3-none-any.whl.metadata (3.2 kB)\n",
+      "Requirement already satisfied: numpy>=1.21.2 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from pmdarima) (1.26.4)\n",
+      "Requirement already satisfied: pandas>=0.19 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from pmdarima) (2.2.3)\n",
+      "Requirement already satisfied: scikit-learn>=0.22 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from pmdarima) (1.5.2)\n",
+      "Requirement already satisfied: scipy>=1.3.2 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from pmdarima) (1.13.1)\n",
+      "Requirement already satisfied: statsmodels>=0.13.2 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from pmdarima) (0.14.4)\n",
+      "Requirement already satisfied: urllib3 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from pmdarima) (2.2.3)\n",
+      "Requirement already satisfied: setuptools!=50.0.0,>=38.6.0 in /Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/site-packages (from pmdarima) (58.0.4)\n",
+      "Requirement already satisfied: packaging>=17.1 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from pmdarima) (23.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from pandas>=0.19->pmdarima) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from pandas>=0.19->pmdarima) (2024.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from pandas>=0.19->pmdarima) (2024.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from scikit-learn>=0.22->pmdarima) (3.5.0)\n",
+      "Requirement already satisfied: patsy>=0.5.6 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from statsmodels>=0.13.2->pmdarima) (1.0.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/site-packages (from python-dateutil>=2.8.2->pandas>=0.19->pmdarima) (1.15.0)\n",
+      "Downloading pmdarima-2.0.4-cp39-cp39-macosx_11_0_arm64.whl (630 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m630.4/630.4 kB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading Cython-3.0.11-py2.py3-none-any.whl (1.2 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: Cython, pmdarima\n",
+      "Successfully installed Cython-3.0.11 pmdarima-2.0.4\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: statsmodels in /Users/matt/Library/Python/3.9/lib/python/site-packages (0.14.4)\n",
+      "Requirement already satisfied: numpy<3,>=1.22.3 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from statsmodels) (1.26.4)\n",
+      "Requirement already satisfied: scipy!=1.9.2,>=1.8 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from statsmodels) (1.13.1)\n",
+      "Requirement already satisfied: pandas!=2.1.0,>=1.4 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from statsmodels) (2.2.3)\n",
+      "Requirement already satisfied: patsy>=0.5.6 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from statsmodels) (1.0.1)\n",
+      "Requirement already satisfied: packaging>=21.3 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from statsmodels) (23.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2024.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /Users/matt/Library/Python/3.9/lib/python/site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2024.2)\n",
+      "Requirement already satisfied: six>=1.5 in /Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/site-packages (from python-dateutil>=2.8.2->pandas!=2.1.0,>=1.4->statsmodels) (1.15.0)\n"
      ]
     }
    ],
@@ -67,12 +104,14 @@
     "!pip install pickle\n",
     "!pip install seaborn\n",
     "!pip install matplotlib.pyplot\n",
-    "!pip install scikit-learn"
+    "!pip install scikit-learn\n",
+    "!pip install pmdarima\n",
+    "!pip install statsmodels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +138,7 @@
        "(43800, 8)"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +268,7 @@
        "2010-01-02 04:00:00      138.0   -7  -5.0  1022.0      SE     6.25     2     0"
       ]
      },
-     "execution_count": 368,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +310,7 @@
        "(43800, 8)"
       ]
      },
-     "execution_count": 371,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,133 +321,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pollution</th>\n",
-       "      <th>dew</th>\n",
-       "      <th>temp</th>\n",
-       "      <th>press</th>\n",
-       "      <th>wnd_dir</th>\n",
-       "      <th>wnd_spd</th>\n",
-       "      <th>snow</th>\n",
-       "      <th>rain</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2010-01-02 00:00:00</th>\n",
-       "      <td>129.0</td>\n",
-       "      <td>-16</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>1020.0</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>1.79</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-02 01:00:00</th>\n",
-       "      <td>148.0</td>\n",
-       "      <td>-15</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>1020.0</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>2.68</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-02 02:00:00</th>\n",
-       "      <td>159.0</td>\n",
-       "      <td>-11</td>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>1021.0</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>3.57</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-02 03:00:00</th>\n",
-       "      <td>181.0</td>\n",
-       "      <td>-7</td>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>1022.0</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>5.36</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-02 04:00:00</th>\n",
-       "      <td>138.0</td>\n",
-       "      <td>-7</td>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>1022.0</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>6.25</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                     pollution  dew  temp   press wnd_dir  wnd_spd  snow  rain\n",
-       "date                                                                          \n",
-       "2010-01-02 00:00:00      129.0  -16  -4.0  1020.0      SE     1.79     0     0\n",
-       "2010-01-02 01:00:00      148.0  -15  -4.0  1020.0      SE     2.68     0     0\n",
-       "2010-01-02 02:00:00      159.0  -11  -5.0  1021.0      SE     3.57     0     0\n",
-       "2010-01-02 03:00:00      181.0   -7  -5.0  1022.0      SE     5.36     1     0\n",
-       "2010-01-02 04:00:00      138.0   -7  -5.0  1022.0      SE     6.25     2     0"
+       "date\n",
+       "2014-12-31 00:00:00    10.0\n",
+       "2014-12-31 01:00:00    11.0\n",
+       "2014-12-31 02:00:00    20.0\n",
+       "2014-12-31 03:00:00     9.0\n",
+       "2014-12-31 04:00:00     8.0\n",
+       "2014-12-31 05:00:00     9.0\n",
+       "2014-12-31 06:00:00     8.0\n",
+       "2014-12-31 07:00:00     8.0\n",
+       "2014-12-31 08:00:00     8.0\n",
+       "2014-12-31 09:00:00     8.0\n",
+       "2014-12-31 10:00:00     7.0\n",
+       "2014-12-31 11:00:00    12.0\n",
+       "2014-12-31 12:00:00    17.0\n",
+       "2014-12-31 13:00:00    11.0\n",
+       "2014-12-31 14:00:00     9.0\n",
+       "2014-12-31 15:00:00    11.0\n",
+       "2014-12-31 16:00:00     8.0\n",
+       "2014-12-31 17:00:00     9.0\n",
+       "2014-12-31 18:00:00    10.0\n",
+       "2014-12-31 19:00:00     8.0\n",
+       "2014-12-31 20:00:00    10.0\n",
+       "2014-12-31 21:00:00    10.0\n",
+       "2014-12-31 22:00:00     8.0\n",
+       "2014-12-31 23:00:00    12.0\n",
+       "Name: pollution, dtype: float64"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df['pollution'][-24:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +375,7 @@
        "['pollution', 'dew', 'temp', 'press', 'wnd_dir', 'wnd_spd', 'snow', 'rain']"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +526,7 @@
        "max       27.000000     36.000000  "
       ]
      },
-     "execution_count": 374,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +554,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 375,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +582,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +604,7 @@
        "array(['SE', 'cv', 'NW', 'NE'], dtype=object)"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +750,7 @@
        "2010-01-02 04:00:00     0  "
       ]
      },
-     "execution_count": 379,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +770,7 @@
        "((39420, 8), (4380, 8))"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
