--- a/report/03 - ARIMA/ARIMA.ipynb
+++ b/report/03 - ARIMA/ARIMA.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we'll take a look at the ARIMA model. The ARIMA model is from the same family of models as the VAR model which we have discussed previously, they're from the Autoregression modelling family. ARIMA stands for:\\\n",
+    "First, we'll take a look at the ARIMA model. The ARIMA model is from the same family of models as the VAR model, they're from the Autoregression modelling family. ARIMA stands for:\\\n",
     "i) AR - AutoRegressive - forecasts based on the past values in the series called lags,\\\n",
     "ii) I - Integrated - involves differencing the time series to make it stationary,\\\n",
     "iii) MA - Moving Average - forecasts based on the past errors in the series called error lags.\n",
     "\n",
-    "It's similar to the VAR model, however it used for a single time series where we have one observed variable. In our case, this will be the value of the pollution."
+    "It's similar to the VAR model, however it's used for a single time series where we have one observed variable. In our case, this will be the value of the pollution."
    ]
   },
   {
@@ -1005,7 +1005,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This suggests that for our data that the ARIMA model simply isn't appropriate. There's too much data and as there's no discernible pattern on small scales the ARIMA model just predicts a constant value for the whole thing in order to minimise the error."
+    "This suggests that for our data that the ARIMA model simply isn't appropriate. There's too much data and as there's no discernible pattern on small scales the ARIMA model just predicts a constant value for the whole thing in order to minimise the error. There is little reason to take this further."
    ]
   },
   {
@@ -1019,7 +1019,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above makes it an inappropraite model for the task at hand. Even on a relatively small amount of data it gives us nothing in the way of predicting pollution levels and this issue would only continue as the amount of data is scaled up. Furthermore, the 'optimal' model we arrived at using auto_arima takes a hefty amount of time to run, a problem that will be further exarcebated if this was to be used for a big data problem as a large amount of time would be required for it to process the increased amount of data.\n",
+    "The above makes it an inappropraite model for the task at hand. Even on a relatively small amount of data it gives us nothing in terms of predicting pollution levels and this issue would only continue as the amount of data is scaled up. Furthermore, the 'optimal' model we arrived at using auto_arima takes a hefty amount of time to run, a problem that will be further exarcebated if this was to be used for a big data problem as a large amount of time would be required for it to process the increased amount of data.\n",
     "\n",
     "All in all, we don't believe that the ARIMA gives us much in the way of being a useful model, nor being appropriate for use as a baseline going forward due to its poor performance. "
    ]
@@ -1050,7 +1050,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
