--- a/report/03 - ARIMA/ARIMA.ipynb
+++ b/report/03 - ARIMA/ARIMA.ipynb
@@ -1005,7 +1005,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This suggests that for our data that the ARIMA model simply isn't appropriate. There's too much data and as there's no discernible pattern on small scales the ARIMA model just predicts a constant value for the whole thing in order to minimise the error. There is little reason to take this further."
+    "This suggests that for our data that the ARIMA model simply isn't appropriate. There's too much data and as there's no discernible pattern on small scales the ARIMA model just predicts a constant value for the whole thing in order to minimise the error. There is little reason to take this any further."
    ]
   },
   {
