--- a/report/03 - ARIMA/ARIMA.ipynb
+++ b/report/03 - ARIMA/ARIMA.ipynb
@@ -1030,7 +1030,7 @@
    "source": [
     "The above makes it an inappropraite model for the task at hand. Even on a relatively small amount of data it gives us nothing in terms of predicting pollution levels and this issue would only continue as the amount of data is scaled up. Furthermore, the 'optimal' model we arrived at using auto_arima takes a hefty amount of time to run, a problem that will be further exarcebated if this was to be used for a big data problem as a large amount of time would be required for it to process the increased amount of data.\n",
     "\n",
-    "All in all, we don't believe that the ARIMA gives us much in the way of being a useful model, nor being appropriate for use as a baseline going forward due to its poor performance. "
+    "All in all, we don't believe that the ARIMA gives us much in the way of being a useful model."
    ]
   },
   {
@@ -1059,7 +1059,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
