--- a/report/06- Multivariate LSTM/LSTM_practice.ipynb
+++ b/report/06- Multivariate LSTM/LSTM_practice.ipynb
@@ -2509,12 +2509,10 @@
     }
    ],
    "source": [
-    "# Extract the encoder part\n",
+    "#Extract the encoder part\n",
     "encoder = Model(inputs=input_layer, outputs=encoder)\n",
-    "\n",
-    "# Summarize the encoder model\n",
     "encoder.summary()\n",
-    "# Encode the training data\n",
+    "\n",
     "encoded_X_train = encoder.predict(X_train)\n",
     "encoded_X_test = encoder.predict(X_test)"
    ]
@@ -2582,22 +2580,17 @@
    ],
    "source": [
     "\n",
-    "# Build a new model to predict y_train from encoded_X_train\n",
+    "#Build a new model to predict y_train from the encoded\n",
     "predictor_model = Sequential()\n",
-    "predictor_model.add(Input(shape=(encoded_X_train.shape[1],)))  # Input shape of the encoded data\n",
+    "predictor_model.add(Input(shape=(encoded_X_train.shape[1],))) \n",
     "predictor_model.add(Dense(50))  \n",
-    "predictor_model.add(Dense(n_outputs, activation='linear'))  # Output layer\n",
-    "\n",
-    "# Compile the model\n",
+    "predictor_model.add(Dense(n_outputs, activation='linear'))  \n",
     "predictor_model.compile(optimizer='adam', loss='mse', metrics=[RootMeanSquaredError()])\n",
     "\n",
-    "# Train the model\n",
+    "#Train the model\n",
     "predictor_model.fit(encoded_X_train, y_train, epochs=20, validation_split=0.1, batch_size=100, shuffle=False )\n",
-    "\n",
-    "# Predict on the test data\n",
     "y_pred = predictor_model.predict(encoded_X_test)\n",
     "\n",
-    "# Evaluate the performance\n",
     "mse_test = mean_squared_error(y_test, y_pred)\n",
     "print(f'Mean Squared Error on Test Set: {mse_test:.4f}')\n"
    ]
@@ -2999,7 +2992,6 @@
     "\n",
     "LAG_LSTM.compile(optimizer=Adam(learning_rate = 0.001), loss='mse', metrics = [RootMeanSquaredError()])\n",
     "\n",
-    "# Save the initial weights of the model right after it is defined and compiled\n",
     "initial_lag_weights = LAG_LSTM.get_weights()\n",
     "\n",
     "LAG_LSTM.summary()"
@@ -3401,7 +3393,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_gpus = 1 #Replace with the number of available GPUs\n"
+    "num_gpus = 1 #Number of available GPUs\n"
    ]
   },
   {
@@ -4561,11 +4553,11 @@
    ],
    "source": [
     "with strategy.scope():\n",
-    "    tf.random.set_seed(7)  # For reproducibility\n",
+    "    tf.random.set_seed(7)  \n",
     "    model = Sequential()\n",
     "    model.add(Input(shape=(n_steps, n_features)))\n",
     "    model.add(LSTM(32, return_sequences=True))\n",
-    "    model.add(Dropout(0.1))  # Prevent overfitting\n",
+    "    model.add(Dropout(0.1))  \n",
     "    model.add(LSTM(16, return_sequences=False))\n",
     "    model.add(Dense(n_outputs, activation='linear'))\n",
     "\n",
